// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorSwitcher should render the rgb switcher correctly when blue is active 1`] = `
<div
  className="colorSwitcher_1osgznj"
>
  <div
    className="color_17zglbt"
    key="1-color-red"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-red_k554e1"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-green"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-green_22ph69"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-blue"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-blue_106q26s"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-yellow"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-yellow_1ywdg4u"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-pink"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-pink_ub5v9e"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-purple"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-purple_s6keop"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-warm"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-warm_1wjcaqm"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-neutral"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-neutral_1hyp8n0"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-cold"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-cold_k70gul"
    />
  </div>
</div>
`;

exports[`ColorSwitcher should render the rgb switcher correctly when cold is active 1`] = `
<div
  className="colorSwitcher_1osgznj"
>
  <div
    className="color_17zglbt"
    key="1-color-red"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-red_k554e1"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-green"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-green_22ph69"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-blue"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-blue_106q26s"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-yellow"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-yellow_1ywdg4u"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-pink"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-pink_ub5v9e"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-purple"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-purple_s6keop"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-warm"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-warm_1wjcaqm"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-neutral"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-neutral_1hyp8n0"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-cold"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-cold_k70gul"
    />
  </div>
</div>
`;

exports[`ColorSwitcher should render the rgb switcher correctly when green is active 1`] = `
<div
  className="colorSwitcher_1osgznj"
>
  <div
    className="color_17zglbt"
    key="1-color-red"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-red_k554e1"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-green"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-green_22ph69"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-blue"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-blue_106q26s"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-yellow"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-yellow_1ywdg4u"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-pink"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-pink_ub5v9e"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-purple"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-purple_s6keop"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-warm"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-warm_1wjcaqm"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-neutral"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-neutral_1hyp8n0"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-cold"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-cold_k70gul"
    />
  </div>
</div>
`;

exports[`ColorSwitcher should render the rgb switcher correctly when neutral is active 1`] = `
<div
  className="colorSwitcher_1osgznj"
>
  <div
    className="color_17zglbt"
    key="1-color-red"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-red_k554e1"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-green"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-green_22ph69"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-blue"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-blue_106q26s"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-yellow"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-yellow_1ywdg4u"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-pink"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-pink_ub5v9e"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-purple"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-purple_s6keop"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-warm"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-warm_1wjcaqm"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-neutral"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-neutral_1hyp8n0"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-cold"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-cold_k70gul"
    />
  </div>
</div>
`;

exports[`ColorSwitcher should render the rgb switcher correctly when pink is active 1`] = `
<div
  className="colorSwitcher_1osgznj"
>
  <div
    className="color_17zglbt"
    key="1-color-red"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-red_k554e1"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-green"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-green_22ph69"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-blue"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-blue_106q26s"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-yellow"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-yellow_1ywdg4u"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-pink"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-pink_ub5v9e"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-purple"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-purple_s6keop"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-warm"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-warm_1wjcaqm"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-neutral"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-neutral_1hyp8n0"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-cold"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-cold_k70gul"
    />
  </div>
</div>
`;

exports[`ColorSwitcher should render the rgb switcher correctly when purple is active 1`] = `
<div
  className="colorSwitcher_1osgznj"
>
  <div
    className="color_17zglbt"
    key="1-color-red"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-red_k554e1"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-green"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-green_22ph69"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-blue"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-blue_106q26s"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-yellow"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-yellow_1ywdg4u"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-pink"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-pink_ub5v9e"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-purple"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-purple_s6keop"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-warm"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-warm_1wjcaqm"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-neutral"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-neutral_1hyp8n0"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-cold"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-cold_k70gul"
    />
  </div>
</div>
`;

exports[`ColorSwitcher should render the rgb switcher correctly when red is active 1`] = `
<div
  className="colorSwitcher_1osgznj"
>
  <div
    className="color_17zglbt"
    key="1-color-red"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-red_k554e1"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-green"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-green_22ph69"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-blue"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-blue_106q26s"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-yellow"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-yellow_1ywdg4u"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-pink"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-pink_ub5v9e"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-purple"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-purple_s6keop"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-warm"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-warm_1wjcaqm"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-neutral"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-neutral_1hyp8n0"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-cold"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-cold_k70gul"
    />
  </div>
</div>
`;

exports[`ColorSwitcher should render the rgb switcher correctly when warm is active 1`] = `
<div
  className="colorSwitcher_1osgznj"
>
  <div
    className="color_17zglbt"
    key="1-color-red"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-red_k554e1"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-green"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-green_22ph69"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-blue"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-blue_106q26s"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-yellow"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-yellow_1ywdg4u"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-pink"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-pink_ub5v9e"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-purple"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-purple_s6keop"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-warm"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-warm_1wjcaqm"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-neutral"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-neutral_1hyp8n0"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-cold"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-cold_k70gul"
    />
  </div>
</div>
`;

exports[`ColorSwitcher should render the rgb switcher correctly when yellow is active 1`] = `
<div
  className="colorSwitcher_1osgznj"
>
  <div
    className="color_17zglbt"
    key="1-color-red"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-red_k554e1"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-green"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-green_22ph69"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-blue"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-blue_106q26s"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-yellow"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-yellow_1ywdg4u"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-pink"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-pink_ub5v9e"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-purple"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-purple_s6keop"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-warm"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-warm_1wjcaqm"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-neutral"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-neutral_1hyp8n0"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-cold"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-cold_k70gul"
    />
  </div>
</div>
`;

exports[`ColorSwitcher should render the white switcher correctly 1`] = `
<div
  className="colorSwitcher_1osgznj"
>
  <div
    className="color_17zglbt"
    key="1-color-neutral"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-neutral_1hyp8n0"
    />
  </div>
</div>
`;

exports[`ColorSwitcher should render the white-spectrum switcher correctly when cold is active 1`] = `
<div
  className="colorSwitcher_1osgznj"
>
  <div
    className="color_17zglbt"
    key="1-color-warm"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-warm_1wjcaqm"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-neutral"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-neutral_1hyp8n0"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-cold"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-cold_k70gul"
    />
  </div>
</div>
`;

exports[`ColorSwitcher should render the white-spectrum switcher correctly when neutral is active 1`] = `
<div
  className="colorSwitcher_1osgznj"
>
  <div
    className="color_17zglbt"
    key="1-color-warm"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-warm_1wjcaqm"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-neutral"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-neutral_1hyp8n0"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-cold"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-cold_k70gul"
    />
  </div>
</div>
`;

exports[`ColorSwitcher should render the white-spectrum switcher correctly when warm is active 1`] = `
<div
  className="colorSwitcher_1osgznj"
>
  <div
    className="color_17zglbt"
    key="1-color-warm"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-warm_1wjcaqm"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-neutral"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-neutral_1hyp8n0"
    />
  </div>
  <div
    className="color_17zglbt"
    key="1-color-cold"
    onClick={[Function]}
  >
    <div
      className="inner_16vgkgb-o_O-cold_k70gul"
    />
  </div>
</div>
`;
